--- a/src/assets/scss/components/_home.scss
+++ b/src/assets/scss/components/_home.scss
@@ -1,3 +1,17 @@
 .chead {
     background: white;
 }
+
+#headerWrapper{
+    background: #D93639;
+    a{
+        color: black;
+    }
+}
+
+
+#footerWrapper{
+    width: 100%;
+    height: 25%;
+    background: rgb(7, 78, 104);
+}
